[gd_scene load_steps=8 format=3 uid="uid://dpapysvarucu0"]

[ext_resource type="Script" path="res://Scripts/start.gd" id="1_3d3si"]
[ext_resource type="FontFile" uid="uid://dwtniqvivhe7u" path="res://Imports/Fonts/Kenney Rocket.ttf" id="1_c8b1b"]
[ext_resource type="Texture2D" uid="uid://fs5avqnjr5nf" path="res://Imports/Images/Capturegame.png" id="2_aejep"]
[ext_resource type="Texture2D" uid="uid://dxity57eisgbl" path="res://Imports/UI_Icons/Button Itch Pack/Button Itch Pack/Start/Start1.png" id="3_pxuwf"]
[ext_resource type="Texture2D" uid="uid://dtof23f5hvpmm" path="res://Imports/UI_Icons/Button Itch Pack/Button Itch Pack/Start/Start5.png" id="4_md1ix"]
[ext_resource type="Texture2D" uid="uid://bqn2dihsii2x0" path="res://Imports/UI_Icons/Button Itch Pack/Button Itch Pack/Start/Start2.png" id="5_e6mbr"]
[ext_resource type="PackedScene" uid="uid://be2figrwybtsd" path="res://Scenes/cursor.tscn" id="15_qx4m6"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Start"
script = ExtResource("1_3d3si")
metadata/_edit_vertical_guides_ = [1462.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 649.0
texture = ExtResource("2_aejep")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 583.0
offset_top = 109.0
offset_right = -446.345
offset_bottom = 169.0
grow_horizontal = 2
scale = Vector2(4.32, 4.32)
theme_override_fonts/normal_font = ExtResource("1_c8b1b")
text = " A Simple Game"
fit_content = true
scroll_following = true

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 137.0
offset_top = -131.69
offset_right = 201.0
offset_bottom = -115.69
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(4.815, 4.815)
texture_normal = ExtResource("3_pxuwf")
texture_pressed = ExtResource("4_md1ix")
texture_hover = ExtResource("5_e6mbr")

[node name="PlayerInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = -3.0
offset_right = 514.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -17.0
offset_right = 126.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Pseudo"

[node name="cursor" parent="." instance=ExtResource("15_qx4m6")]
scale = Vector2(5, 5)

[connection signal="pressed" from="TextureButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="get_and_send_player_username"]
